# seedbox-serverless

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.amazonq/rules/: EscopoTecnicoArquitetura.md  GeneralRules.md  ModoDeTrabalho.md  Roadmap.md
backend/lambda/api/: __init__.py  auth.py  exceptions.py  handler.py  response.py  routes.py  state_manager.py  validators.py
backend/lambda/authorizer/: handler.py
backend/lambda/worker-trigger/: handler.py
backend/worker/config/: transmission.json
backend/worker/scripts/: __init__.py  disk_manager.py  error_handler.py  main.py  monitor.py  s3_client.py  spot_handler.py  sync.py  utils.py  (+1 more)
docs/: API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  COMPONENTS.md
docs/infrastructure/: cloudflare-setup.md  resources.md
docs/security/: iam-policies.md
docs/testing/: failure-scenarios.md
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx
iac/terraform/: main.tf  outputs.tf  variables.tf  versions.tf
memory-bank/: DECISION_LOG.md  INTEGRATION_POINTS.md  KNOWN_ISSUES.md  LESSONS_LEARNED.md  PROJECT_CONTEXT.md  README.md
memory-bank/CHAT_HISTORY_SUMMARIES/: chat_001_2026-04-22_repo_initialization.md  chat_002_2026-04-22_full_implementation.md
scripts/deploy/: build-lambdas.sh  deploy-frontend.sh  deploy-worker.sh
scripts/setup/: bootstrap.ps1  bootstrap.sh
tests/: conftest.py
tests/integration/: test_failure_scenarios.py
tests/unit/: conftest.py  test_auth.py  test_routes.py  test_state_manager.py  test_validators.py  test_worker.py
(+42 files in other folders)
